new property topicNamespace
Signed-off-by: Jürgen Hemelt <juergen.hemelt@atruvia.de>